@@ -113,7 +113,7 @@
 #define AF_ENABLE_ZONING                       _ULL(0x0000000000000080)
 #define AF_SYNC_NODE_NAMES_WITH_DNS            _ULL(0x0000000000000100)
 #define AF_CHECK_TRUSTED_NODES                 _ULL(0x0000000000000200)
-#define AF_ENABLE_NXSL_CONTAINER_FUNCS         _ULL(0x0000000000000400)
+#define AF_ENABLE_NXSL_CONTAINER_FUNCTIONS     _ULL(0x0000000000000400)
 #define AF_USE_FQDN_FOR_NODE_NAMES             _ULL(0x0000000000000800)
 #define AF_APPLY_TO_DISABLED_DCI_FROM_TEMPLATE _ULL(0x0000000000001000)
 #define AF_DEBUG_CONSOLE_DISABLED              _ULL(0x0000000000002000)
@@ -136,6 +136,7 @@
 #define AF_SYSLOG_DISCOVERY                    _ULL(0x0000001000000000)
 #define AF_ENABLE_LOCAL_CONSOLE                _ULL(0x0000002000000000)
 #define AF_CACHE_DB_ON_STARTUP                 _ULL(0x0000004000000000)
+#define AF_ENABLE_NXSL_FILE_IO_FUNCTIONS       _ULL(0x0000008000000000)
 #define AF_SERVER_INITIALIZED                  _ULL(0x4000000000000000)
 #define AF_SHUTDOWN                            _ULL(0x8000000000000000)
 
